--- a/backend/src/main/resources/database.properties
+++ b/backend/src/main/resources/database.properties
@@ -1,5 +1,5 @@
-# ???????
+# æ°æ®åºéç½®
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/javaee-vite?useSSL=false&serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/javaee-vite?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 db.username=root
 db.password=root
